--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,11 +17,11 @@ jobs:
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Build and test
-        uses: docker/build-push-action@v6
-        with:
-          target: test
-          load: true
+      # - name: Build and test
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     target: test
+      #     load: true
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
