--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,14 +5,19 @@ on:
     branches:
       - containerize
 
+env:
+  DOCKER_REPOSITORY_NAME: ruoyi-vue3
+  FRONTEND_NAME: frontend
+  FRONTEND_PORT: 3000
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Login to Docker Hub
+      - name: Login to Docker Container Registry
         uses: docker/login-action@v3
         with:
-          registry: crpi-9t66pyx5tr44wo4w.cn-shanghai.personal.cr.aliyuncs.com
+          registry: ${{ secrets.DOCKER_REGISTRY }}
           username: ${{ vars.DOCKER_REGISTRY_USERNAME }}
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
       - name: Set up Docker Buildx
@@ -28,7 +33,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           target: final
-          tags: crpi-9t66pyx5tr44wo4w.cn-shanghai.personal.cr.aliyuncs.com/${{ vars.DOCKER_REGISTRY_USERNAME }}/${{ vars.DOCKER_REPOSITORY_NAME }}:latest
+          tags: ${{ secrets.DOCKER_REGISTRY }}/${{ vars.DOCKER_REGISTRY_USERNAME }}/${{ env.DOCKER_REPOSITORY_NAME }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -44,14 +49,14 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            echo "${{ secrets.DOCKER_REGISTRY_PASSWORD }}" | docker login --username ${{ vars.DOCKER_REGISTRY_USERNAME }} --password-stdin crpi-9t66pyx5tr44wo4w.cn-shanghai.personal.cr.aliyuncs.com
-            docker pull crpi-9t66pyx5tr44wo4w.cn-shanghai.personal.cr.aliyuncs.com/${{ vars.DOCKER_REGISTRY_USERNAME }}/${{ vars.DOCKER_REPOSITORY_NAME }}:latest
-            if [ "$(docker inspect -f '{{.State.Running}}' frontend)" = "true" ]; then
-              docker rm -f frontend
+            echo "${{ secrets.DOCKER_REGISTRY_PASSWORD }}" | docker login --username ${{ vars.DOCKER_REGISTRY_USERNAME }} --password-stdin ${{ secrets.DOCKER_REGISTRY }}
+            docker pull ${{ secrets.DOCKER_REGISTRY }}/${{ vars.DOCKER_REGISTRY_USERNAME }}/${{ env.DOCKER_REPOSITORY_NAME }}:latest
+            if [ "$(docker inspect -f '{{.State.Running}}' ${{ env.FRONTEND_NAME }})" = "true" ]; then
+              docker rm -f ${{ env.FRONTEND_NAME }}
             fi
             docker run -d \
-              --name frontend \
-              --label "traefik.http.routers.frontend.rule=Host(\`${{ secrets.SSH_HOST }}\`)" \
-              --label "traefik.http.services.frontend.loadbalancer.server.port=3000" \
+              --name ${{ env.FRONTEND_NAME }} \
+              --label "traefik.http.routers.${{ env.FRONTEND_NAME }}.rule=Host(\`${{ secrets.SSH_HOST }}\`)" \
+              --label "traefik.http.services.${{ env.FRONTEND_NAME }}.loadbalancer.server.port=${{ env.FRONTEND_PORT }}" \
               --network traefik-network \
-              crpi-9t66pyx5tr44wo4w.cn-shanghai.personal.cr.aliyuncs.com/${{ vars.DOCKER_REGISTRY_USERNAME }}/${{ vars.DOCKER_REPOSITORY_NAME }}:latest
+              ${{ secrets.DOCKER_REGISTRY }}/${{ vars.DOCKER_REGISTRY_USERNAME }}/${{ env.DOCKER_REPOSITORY_NAME }}:latest
