--- a/.github/workflows/branch-ci.yaml
+++ b/.github/workflows/branch-ci.yaml
@@ -31,7 +31,6 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            type=sha
       - name: Login to Docker Container Registry
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
@@ -51,7 +50,7 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
-          target: final
+          target: prod
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
