增加 NGINX_SERVER_NAME 环境变量

--- a/compose.yaml
+++ b/compose.yaml
@@ -25,6 +25,7 @@ services:
       context: .
       target: dev
     environment:
+      - NGINX_SERVER_NAME=localhost
       - TZ=Asia/Shanghai
     volumes:
       #      - /etc/timezone:/etc/timezone:ro
