--- a/.github/workflows/tag-ci-cd.yaml
+++ b/.github/workflows/tag-ci-cd.yaml
@@ -91,6 +91,7 @@ jobs:
             fi
             docker run -d \
               --name ${{ env.FRONTEND_NAME }} \
+              -e "NGINX_SERVER_NAME=${{ secrets.NGINX_SERVER_NAME }}" \
               -v /etc/timezone:/etc/timezone:ro \
               -v /etc/localtime:/etc/localtime:ro \
               --label "traefik.http.routers.${{ env.FRONTEND_NAME }}.rule=Host(\`${{ secrets.SSH_HOST }}\`)" \
