--- a/nginx.conf
+++ b/nginx.conf
@@ -32,7 +32,7 @@ http {
 
     server {
         listen       80;
-        server_name  localhost;
+        server_name  ${NGINX_SERVER_NAME:-localhost};
 		charset utf-8;
 
 		location / {
